pod-security/restricted/restrict-volume-types.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-volume-types
  annotations:
    policies.kyverno.io/category: Pod Security Standards (Default)
    policies.kyverno.io/description: ...  
spec:
  background: true
  validationFailureAction: audit
  rules:
  - name: ...
    match:
      resources:
        kinds:
        - Pod  
    validate:
      message: "..."
      anyPattern:
      - spec:
      - spec:
